# qc-parser

./: .gitignore  CHANGELOG.rst  Makefile  README.md  pyproject.toml
.github/workflows/: main-test.yml
src/: MetricsParser.py  QMGeneric.py  metrics_to_calculate.py  metrics_to_extract.py  parse_qc.py  utils.py
tests/: test_parseqc.py
tests/data/: NanoPlot.txt  RNA-SeQC.txt  bamstats_res.txt  fastqc_summary.txt  fastqc_summary_2.txt  kraken2_report.txt  mosdepth.summary.txt  picard_CollectGcBiasMetrics.txt  picard_CollectInsertSizeMetrics.txt  picard_CollectInsertSizeMetrics_RF.txt  picard_CollectWgsMetrics.txt  picard_collectAlignmentSummaryMetrics.txt  picard_collectBaseDistributionByCycle.txt  pigeon_filter.json  samtool_stats_res.txt  somalier_FAILED.tsv  somalier_PASSED.tsv  tissue_classifier_output.txt  verifybamid2.out
