[tool.poetry]
name = "qc-parser"
version = "0.0.13"
description = "Parses outputs of different QC tools and unifies them for the SMaHT portal"
authors = ["Alexander Veit <alexander_veit@hms.harvard.edu>", "Michele Berselli <berselli.michele@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smaht-dac/qc-parser"
repository = "https://github.com/smaht-dac/qc-parser"
packages = [
  { include="src", from="." }
]
include=["src"]

classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse-qc = "src.parse_qc:parse_qc"
